--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,30 +1,9 @@
 <html>
 
+<head>
+</head>
 
 <body>
-
-<div>
-    <form method="post">
-        <input type="text" name="name" placeholder="Введите имя">
-        <input type="text" name="surname" placeholder="Введите фимилию">
-        <input type="text" name="lastname" placeholder="Введите отчество">
-        <button type="submit">Добавить</button>
-    </form>
-</div>
-
-<div>Список Студентов</div>
-<form method="post" action="filter">
-    <input type="text" name="filter">
-    <button type="submit">Найти</button>
-</form>
-{{#users}}
-<div>
-    <b>{{id}}</b>
-    <b>{{name}}</b>
-    <b>{{surname}}</b>
-    <b>{{lastname}}</b>
-</div>
-{{/users}}
+<h1>Cnhfybwf</h1>
 </body>
-
 </html>
