--- a/src/main/resources/templates/registration.mustache
+++ b/src/main/resources/templates/registration.mustache
@@ -1,21 +1,21 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <title>Spring Security Example </title>-->
-<!--</head>-->
-<!--<body>-->
-<!--Add new User-->
-<!--    {{#message}}-->
-<!--        {{message}}-->
-<!--    {{/message}}-->
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<head>
+    <title>Spring Security Example </title>
+</head>
+<body>
+Add new User
+    {{#message}}
+        {{message}}
+    {{/message}}
 
-<!--<form action="/registratin" method="post">-->
-<!--    <div><label> User Name : <input type="text" name="username"/> </label></div>-->
-<!--    <div><label> Password: <input type="password" name="password"/> </label></div>-->
-<!--&lt;!&ndash;    mustache&ndash;&gt;-->
-<!--    <input type="hidden" name="_csrf" value="{{_csrf.token}}">-->
-<!--&lt;!&ndash;    mustache&ndash;&gt;-->
-<!--    <div><input type="submit" value="Sign In"/></div>-->
-<!--</form>-->
-<!--</body>-->
-<!--</html>-->
+<form action="/registration" method="post">
+    <div><label> User Name : <input type="text" name="username"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
+<!--    mustache-->
+    <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+<!--    mustache-->
+    <div><input type="submit" value="Sign In"/></div>
+</form>
+</body>
+</html>
